feat(markly): tsup configuration

--- a/packages/markly/package.json
+++ b/packages/markly/package.json
@@ -1,10 +1,23 @@
 {
-  "name": "@workspace/markly",
+  "name": "markly",
   "version": "0.0.0",
+  "description": "Core library for Markly",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neuronexul/markly.git",
+    "directory": "packages/markly"
+  },
   "type": "module",
   "private": true,
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "build": "tsup src/index.ts --format esm --dts --clean",
+    "dev": "tsup src/index.ts --format esm --dts --watch",
+    "lint": "eslint src/",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@turbo/gen": "^2.7.6",
@@ -12,9 +25,24 @@
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "eslint": "^9.39.2",
+    "tsup": "^8.5.1",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "zod": "^4.3.6"
-  }
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./styles": {
+      "import": "./dist/styles/index.css"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ]
 }
