feat: Installed codemirror packages

--- a/packages/markly/package.json
+++ b/packages/markly/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@lezer/markdown": "^1.6.3",
     "zod": "^4.3.6"
   },
   "exports": {
@@ -44,5 +45,11 @@
     "dist",
     "README.md",
     "LICENSE"
-  ]
+  ],
+  "peerDependencies": {
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/language": "^6.12.1",
+    "@codemirror/state": "^6.5.4",
+    "@codemirror/view": "^6.39.11"
+  }
 }
