--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,8 +12,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.10.1",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/language": "^6.12.1",
+    "@codemirror/language-data": "^6.5.2",
+    "@codemirror/state": "^6.5.4",
+    "@codemirror/view": "^6.39.11",
+    "@uiw/codemirror-theme-github": "^4.25.4",
+    "@uiw/react-codemirror": "^4.25.4",
     "@workspace/ui": "workspace:*",
     "lucide-react": "^0.475.0",
+    "markly": "workspace:*",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
