--- a/packages/markly/package.json
+++ b/packages/markly/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@lezer/common": "^1.5.0",
     "@lezer/markdown": "^1.6.3",
     "zod": "^4.3.6"
   },
@@ -47,8 +48,10 @@
     "LICENSE"
   ],
   "peerDependencies": {
+    "@codemirror/commands": "^6.10.1",
     "@codemirror/lang-markdown": "^6.5.0",
     "@codemirror/language": "^6.12.1",
+    "@codemirror/language-data": "^6.5.2",
     "@codemirror/state": "^6.5.4",
     "@codemirror/view": "^6.39.11"
   }
