--- a/packages/markly/tsconfig.json
+++ b/packages/markly/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "@workspace/typescript-config/base.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "paths": {
       "@workspace/markly/*": ["./src/*"]
     }
