--- a/packages/markly/package.json
+++ b/packages/markly/package.json
@@ -34,10 +34,8 @@
     "zod": "^4.3.6"
   },
   "exports": {
-    "./*": "./src/*",
-    "./styles": {
-      "import": "./dist/styles/index.css"
-    }
+    "./*": "./src/*.ts",
+    ".": "./src/index.ts"
   },
   "files": [
     "dist",
