--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,12 +22,22 @@
     "@uiw/codemirror-theme-github": "^4.25.4",
     "@uiw/react-codemirror": "^4.25.4",
     "@workspace/ui": "workspace:*",
-    "lucide-react": "^0.475.0",
+    "class-variance-authority": "^0.7.1",
+    "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.563.0",
     "markly": "workspace:*",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "react-hook-form": "^7.71.1",
+    "react-resizable-panels": "^4.5.6",
+    "recharts": "2.15.4",
+    "sonner": "^2.0.7",
+    "vaul": "^1.1.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
