--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,7 +27,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
-    "markly": "workspace:*",
+    "draftly": "workspace:*",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
