feat(web): Added uuid

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,10 +24,10 @@
     "@workspace/ui": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
+    "draftly": "workspace:*",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
-    "draftly": "workspace:*",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
@@ -36,6 +36,7 @@
     "react-resizable-panels": "^4.5.6",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zod": "^4.3.6"
   },
