--- a/packages/draftly/package.json
+++ b/packages/draftly/package.json
@@ -33,6 +33,7 @@
     "@lezer/highlight": "^1.2.3",
     "@lezer/markdown": "^1.6.3",
     "dompurify": "^3.3.1",
+    "style-mod": "^4.1.3",
     "zod": "^4.3.6"
   },
   "exports": {
