--- a/packages/draftly/package.json
+++ b/packages/draftly/package.json
@@ -34,6 +34,7 @@
     "@lezer/markdown": "^1.6.3",
     "dompurify": "^3.3.1",
     "katex": "^0.16.28",
+    "mermaid": "^11.12.2",
     "style-mod": "^4.1.3",
     "zod": "^4.3.6"
   },
