--- a/packages/draftly/package.json
+++ b/packages/draftly/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draftly",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0",
   "description": "Core library for draftly",
   "license": "MIT",
   "repository": {
